objects/ssot__AssessmentActionItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentActionItemCategory__c</fullName>
        <label>Assessment Action Item Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentActionItemStatus__c</fullName>
        <label>Assessment Action Item Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentDefinitionId__c</fullName>
        <label>Assessment Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentId__c</fullName>
        <label>Assessment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Layout Task Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291273912_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentActionItem_AssessmentDefin_rel</label>
        <referenceTo>ssot__AssessmentDefinition__dlm</referenceTo>
        <relationshipLabel>AssessmentActionItem_AssessmentDefin_rel</relationshipLabel>
        <relationshipName>rel_1720291273912_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291280132_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentActionItem_AssessmentId_ma_rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>AssessmentActionItem_AssessmentId_ma_rel</relationshipLabel>
        <relationshipName>rel_1720291280132_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>